# graduation-project

./: LICENSE  README.md
acado_ccode_generation/: CMakeLists.txt
acado_ccode_generation/solver/NMHE_rover/: nmhe_auxiliary_functions.h  nmhe_solver.c
acado_ccode_generation/solver/NMPC_rover/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
acado_ccode_generation/solver/NMPC_rover_learning/: nmpc_integrator.c  nmpc_qpoases_interface.hpp
acado_ccode_generation/src/: rover_jackal_mhe.cpp  rover_jackal_nmpc.cpp  rover_jackal_nmpc_learning.cpp  rover_jackal_nmpc_ver1.cpp
amr-lmpcc/lmpcc/config/: lmpcc_config_parameter.yaml
amr-lmpcc/lmpcc_obstacle_feed/src/: lmpcc_obstacle_feed_node.cpp
amr-lmpcc/mobile_robot_state_publisher/: CMakeLists.txt
cpr_gazebo/cpr_office_gazebo/launch/: office_world.launch  office_world_updated.launch  office_world_with_plugin.launch
cpr_gazebo/cpr_office_gazebo/worlds/: actually_empty_world_with_plugin.world
cpr_gazebo/jackal_files/: realsense.urdf.xacro
jackal/jackal_control/config/: control.yaml.bak
jackal/jackal_control/src/: torque_control.py
jackal/jackal_gazebo/worlds/: jackal_different_floors.world
mpc_controller/acado_ccode_generation/solver/NMHE_rover/: nmhe_auxiliary_functions.c  nmhe_qpoases_interface.hpp
mpc_controller/acado_ccode_generation/solver/NMPC_rover_learning/: nmpc_qpoases_interface.cpp  nmpc_solver.c
mpc_controller/acado_ccode_generation/src/: rover_jackal_nmpc_ver2.cpp
mpc_controller/jackal/: README
mpc_controller/jackal/jackal_control/config/: control.yaml
mpc_controller/jackal/jackal_control/launch/: control.launch
mpc_controller/jackal/jackal_control/src/: velocity_control.py
mpc_controller/jackal/jackal_description/urdf/: jackal.urdf.xacro
mpc_controller/jackal/jackal_gazebo/launch/: empty_world.launch
mpc_controller/ros_acado_bridge/ACADOtoolkit/: CMakeLists.txt
mpc_controller/rover_jackal/mocap_rover/: package.xml
mpc_controller/rover_jackal/mocap_rover/include/: nonlinear_mpc_pc.h~
mpc_controller/rover_jackal/mocap_rover/launch/: mocap_bridge_gazebo.launch
mpc_controller/rover_jackal/mocap_rover/src/: mocap_bridge_gazebo.cpp
mpc_controller/rover_jackal/nmhe_rover/: CMakeLists.txt
mpc_controller/rover_jackal/nmhe_rover/src/: nmhe_rover.cpp
mpc_controller/rover_jackal/nmpc_pc_learning_rover/include/: nmpc_pc_learning_rover.h  nmpc_pc_learning_rover_main.h  nmpc_pc_mlearning.h~
mpc_controller/rover_jackal/nmpc_pc_learning_rover/launch/: nmpc_pc_gazebo.launch
mpc_controller/rover_jackal/nmpc_pc_learning_rover/src/: nmpc_pc_learning_rover.cpp
mpc_controller/rover_jackal/nmpc_pc_rover/: CMakeLists.txt
mpc_controller/rover_jackal/nmpc_pc_rover/include/: nmpc_pc_rover_main.h
mpc_controller/rover_jackal/nmpc_pc_rover/launch/rover_frames/: jackal_gazebo.xml
mpc_controller/rover_jackal/nmpc_pc_rover/solver/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp
mpc_controller/rover_jackal/trajectory_rover/: CMakeLists.txt
mpc_controller/rover_jackal/trajectory_rover/cfg/: set_mpc_traj.cfg~
mpc_controller/rover_jackal/trajectory_rover/launch/: trajectory_rover.launch
mpc_controller/rover_jackal/trajectory_rover/src/: trajectory_rover_main.cpp
pedsim_ros/pedsim_simulator/launch/: corridor.launch
robot_swarm/pedsim_swarm_simulation/: CMakeLists.txt  package.xml
robot_swarm/pedsim_swarm_simulation/launch/: gazebo_man_walking.launch  gazebo_man_walking_square.launch  gazebo_office_scenario.launch  pedsim_man_walking.launch  pedsim_man_walking_square.launch  pedsim_office_group_walk.launch  pedsim_office_populated.launch  pedsim_office_scenario.launch  pedsim_office_simple_scenario.launch
robot_swarm/pedsim_swarm_simulation/maps/: mymap.yaml
robot_swarm/pedsim_swarm_simulation/scenarios/: man_walking.xml  man_walking_square.xml  office_group_walk.xml  office_populated.xml  office_simple_scenario.xml
robot_swarm/pedsim_swarm_simulation/scripts/: social_zones.py
robot_swarm/pedsim_swarm_simulation/worlds/: man_walking.world  man_walking_square.world  square_room_walls_with_objects.world
ros_acado_bridge/: CMakeLists.txt
ros_acado_bridge/ACADOtoolkit/acado/code_generation/templates/: make_acado_solver_sfunction.m.in
rover_jackal/mocap_rover/: CMakeLists.txt
rover_jackal/mocap_rover/include/: mocap_gazebo.h
rover_jackal/nmhe_rover/: package.xml
rover_jackal/nmhe_rover/include/: nmhe_rover.h  nmhe_rover_main.h
rover_jackal/nmhe_rover/launch/: nmhe_gazebo.launch
rover_jackal/nmhe_rover/launch/rover_frames/: jackal_gazebo.xml
rover_jackal/nmhe_rover/solver/: nmhe_common.h  nmhe_integrator.c  nmhe_qpoases_interface.cpp
rover_jackal/nmhe_rover/solver/qpoases/INCLUDE/: Constants.hpp
rover_jackal/nmhe_rover/src/: nmhe_rover_main.cpp
rover_jackal/nmpc_pc_learning_rover/: CMakeLists.txt  package.xml
rover_jackal/nmpc_pc_learning_rover/launch/rover_frames/: jackal_gazebo.xml
rover_jackal/nmpc_pc_learning_rover/solver/: nmpc_common.h
rover_jackal/nmpc_pc_learning_rover/src/: nmpc_pc_learning_rover_main.cpp
rover_jackal/nmpc_pc_rover/: package.xml
rover_jackal/nmpc_pc_rover/include/: nmpc_pc_rover.h
rover_jackal/nmpc_pc_rover/launch/: nmpc_pc_gazebo.launch
rover_jackal/nmpc_pc_rover/solver/: nmpc_solver.c
rover_jackal/nmpc_pc_rover/src/: nmpc_pc_rover.cpp  nmpc_pc_rover_main.cpp
rover_jackal/trajectory_rover/: package.xml
rover_jackal/trajectory_rover/cfg/: set_trajectory_rover.cfg
rover_jackal/trajectory_rover/include/: trajectory_rover.h
rover_jackal/trajectory_rover/src/: trajectory_rover.cpp
rqt_multiplot_configs/: position_xy.xml
