<?xml version="1.0"?>
<package format="2">
  <name>pedsim_swarm_simulation</name>
  <version>0.0.0</version>
  <description>The pedsim_swarm_simulation package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pedsim</build_depend>
  <build_depend>pedsim_msgs</build_depend>
  <build_depend>pedsim_srvs</build_depend>
  <build_depend>pedsim_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pedsim</exec_depend>
  <exec_depend>pedsim_msgs</exec_depend>
  <exec_depend>pedsim_srvs</exec_depend>
  <exec_depend>pedsim_utils</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

</package>
